# testTask

./: CMakeLists.txt
include/: BmpEditor.hpp  BmpToConsole.hpp
src/: BmpEditor.cpp  BmpToConsole.cpp  main.cpp
